core/tests/snapshots/run_scripts__fail_let_destructure_type_check.snap
---
source: core/tests/run_scripts.rs
expression: "run(concat!\n(\"tests/scripts/\", stringify! (fail_let_destructure_type_check), \".rain\"))"
---
Err
<hidden>:6:12 main
<hidden>:10:9 x-inner
<hidden>:46:4 type_constraint_from_concrete-inner
<hidden>:11:3
| 	})
| 	if res.success {
| 		internal._throw(f"type error for ${res.value}, expected ${expected}")
  		^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ "type error for 6, expected Integer"
