core/tests/snapshots/run_scripts__fail_let_type_check.snap
---
source: core/tests/run_scripts.rs
expression: "run(concat! (\"tests/scripts/\", stringify! (fail_let_type_check), \".rain\"))"
---
Err
<hidden>:11:19
| }
| 
| let x: Integer = "5"
                    ^ unrecoverable error: check error: failed type check
