core/tests/snapshots/run_scripts__fail_type_check.snap
---
source: core/tests/run_scripts.rs
expression: "run(concat! (\"tests/scripts/\", stringify! (fail_type_check), \".rain\"))"
---
Err
<hidden>:6:12 main
<hidden>:7:2 main-inner
<hidden>:12:8 foo-inner
<hidden>:46:4 type_constraint_from_concrete-inner
<hidden>:11:3
| 	})
| 	if res.success {
| 		internal._throw(f"type error for ${res.value}, expected ${expected}")
  		^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ "type error for hello, expected Integer"
