core/tests/snapshots/run_scripts__fail_union_type_check.snap
---
source: core/tests/run_scripts.rs
expression: "run(concat! (\"tests/scripts/\", stringify! (fail_union_type_check), \".rain\"))"
---
Err
<hidden>:6:12 main
<hidden>:9:5 main-inner
<hidden>:87:4 Union-inner
<hidden>:11:3
| 	})
| 	if res.success {
| 		internal._throw(f"type error for ${res.value}, expected ${expected}")
  		^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ "type error for false, expected Union"
