core/tests/snapshots/run_scripts__fib.snap
---
source: core/tests/run_scripts.rs
expression: "run(concat! (\"tests/scripts/\", stringify! (fib), \".rain\"))"
---
Ok
Integer(
    RainInteger(
        6765,
    ),
)
