core/tests/snapshots/run_scripts__fn_call.snap
---
source: core/tests/run_scripts.rs
expression: "run(concat! (\"tests/scripts/\", stringify! (fn_call), \".rain\"))"
---
Ok
Integer(
    RainInteger(
        10,
    ),
)
