core/tests/snapshots/run_scripts__format_string.snap
---
source: core/tests/run_scripts.rs
expression: "run(concat! (\"tests/scripts/\", stringify! (format_string), \".rain\"))"
---
Ok
String(
    "a = 6, b = true, c = hi ${a}",
)
