core/tests/snapshots/run_scripts__function_composition.snap
---
source: core/tests/run_scripts.rs
expression: "run(concat! (\"tests/scripts/\", stringify! (function_composition), \".rain\"))"
---
Ok
List(
    RainList(
        [
            Integer(
                RainInteger(
                    20,
                ),
            ),
            Integer(
                RainInteger(
                    26,
                ),
            ),
            Integer(
                RainInteger(
                    16,
                ),
            ),
        ],
    ),
)
