core/tests/snapshots/run_scripts__generated_vs_local.snap
---
source: core/tests/run_scripts.rs
expression: "run(concat! (\"tests/scripts/\", stringify! (generated_vs_local), \".rain\"))"
---
Ok
Integer(
    RainInteger(
        19,
    ),
)
