core/tests/snapshots/run_scripts__import.snap
---
source: core/tests/run_scripts.rs
expression: "run(concat! (\"tests/scripts/\", stringify! (import), \".rain\"))"
---
Ok
Integer(
    RainInteger(
        16,
    ),
)
